Fixed side scrolling
- Header was overflowing the page
- Added max-width: 100vw to header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,8 @@
 
 header {
     padding: 1rem;
-    width: 100vw;
+    max-width: 100vw;
+    width: 100%;
     height: 6rem;
     background: $dark-gradient;
     display: flex;
